--- a/templates/monitor.html
+++ b/templates/monitor.html
@@ -4,15 +4,19 @@
         <th>Привличено подписок</th>
         <th>Потрачено за {{ resp.day }} дня</th>
         <th>Должно потрачено за {{ resp.day }} дня</th>
+        <th>Потрачено за прошлый день</th>
+        <th>Подписчиков за прошлый день</th>
         <th>Критический бюджет</th>
     </tr>
     {% for res in resp.info %}
             <tr>
-                <td>{{ resp.info[res][0].name }}</td>
-                <td>{{ resp.info[res][0].join }}</td>
-                <td>{{ resp.info[res][0].spent }}</td>
-                <td>{{ resp.info[res][0].max_per }}</td>
-                <td>{{ resp.info[res][0].minimal }}</td>
+                <td>{{ resp.info[res].name }}</td>
+                <td>{{ resp.info[res].join | smart_round}}</td>
+                <td>{{ resp.info[res].spent | smart_round }}</td>
+                <td>{{ resp.info[res].max_per | smart_round }}</td>
+                <td>{{ resp.info[res].last.spent | smart_round }}</td>
+                <td>{{ resp.info[res].last.join | smart_round }}</td>
+                <td>{{ resp.info[res].minimal | smart_round }}</td>
             </tr>
     {% endfor %}
 </table>
