--- a/templates/main.html
+++ b/templates/main.html
@@ -38,33 +38,64 @@
         .table_dark tr:hover td {
           text-decoration: underline;
         }
+        a {
+            color: white;
+            text-decoration: none;
+        }
+        a:active {
+            color:white
+        }
       </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 </head>
 <body>
-    <form action="/monitoring" method="GET" accept-charset="utf-8">
-        {% if type | int == 1 %}
-            {{ checkbox("monitor", "Бюджет") }}
-            {{ checkbox("clickbate", "Компании", "") }}
-        {% elif type | int == 2 %}
-            {{ checkbox("monitor", "Бюджет", "") }}
-            {{ checkbox("clickbate", "Компании") }}
-        {% else %}
-            {{ checkbox("monitor", "Бюджет", "") }}
-            {{ checkbox("clickbate", "Компании", "") }}
-        {% endif %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <label for="start_date">От ( например 2020-08-15 ) </label>
-        <input id="start_date" type="text" name="start_date"/>
-        <label for="end_date">до ( например 2020-09-15 ) </label>
-        <input id="end_date" type="text" name="end_date"/> <br>
-        <label for="type">Введите заголовок ( тип ) компании, например "ДР", "Кликбейт"</label>
-        <input id="type" type="text" name="type"/> <br>
-        <input type="submit" value="Показать данные"/>
-    </form>
-    {% if type | int == 1 %}
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/monitoring">Мониторинг <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Создание аккаунта</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Удаление аккаунта</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Введие что надо найти" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
+        </form>
+      </div>
+    </nav>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container d-flex justify-content-center">
+            <form action="/monitoring" method="GET" accept-charset="utf-8">
+                  <div class="form-group">
+                    <label for="start_date">От ( например 2020-08-15 ) </label>
+                    <input id="start_date" type="text" name="start_date"/>
+
+                  </div>
+                  <div class="form-group">
+                    <label for="end_date">до ( например 2020-09-15 ) </label>
+                    <input id="end_date" type="text" name="end_date"/>
+                  </div>
+                <input type="submit" class="btn btn-primary" value="Показать данные"/>
+            </form>
+        </div>
+    </div>
+
+    {% if loading != 0 %}
         {% include 'monitor.html' %}
-    {% elif type | int == 2 %}
-        {% include 'clickbate.html' %}
     {% endif %}
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
