--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,7 @@
     <title>Авторизация </title>
 </head>
 <body>
-    <form action="/monitoring" method="post" accept-charset="utf-8"
-          enctype="multipart/form-data">
+    <form action="/monitoring" method="get" accept-charset="utf-8">
 
         <label for="password">Password</label>
         <input id="password" name="password" type="password" value=""/>
