--- a/templates/login.html
+++ b/templates/login.html
@@ -12,5 +12,15 @@
 
         <input type="submit" name="do_login" value="Войти"/>
     </form>
+    <form action="/company_type" method="get" accept-charset="utf-8">
+
+        <label for="start_date">Дата с которой начать</label>
+        <input id="start_date" name="start_date" type="text" value=""/>
+        <label for="end_date">Дата конца</label>
+        <input id="end_date" name="end_date" type="text" value=""/>
+        <label for="type">Тип компании</label>
+        <input id="type" name="type" type="text" value=""/>
+        <input type="submit" value="Все компании"/>
+    </form>
 </body>
 </html>
