--- a/templates/all.html
+++ b/templates/all.html
@@ -56,7 +56,7 @@
             <td>{{ resp[camp].type }}</td>
             <td>{{ resp[camp].spent }}</td>
             <td>{{ resp[camp].join }}</td>
-            <td><a href="details_company?office={{ resp[camp].idof }}&type={{ info.type }}date_start={{ info.start }}&date_end={{ info.end }}">Подробнее</a></td>
+            <td><a href="details_company?office={{ resp[camp].idof }}&type={{ info.type }}&date_start={{ info.start }}&date_end={{ info.end }}">Подробнее</a></td>
         </tr>
     {% endfor %}
 </body>
